correction alignement button

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,13 @@ header {
   text-align: center;
   color: #7db96f;
   text-decoration: none; 
-  max-width: 50px;
+  max-width: 100px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .fruit-container {
